# warden

./: .gitattributes  .gitignore  BUILD_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_CLOUDFLARE.md  LICENSE  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  TRUST_SPEC.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  skill_submission.md
.github/workflows/: ci.yml  pages.yml
docs/: BUILD_PATH.md  FAQ.md  PHASES.md  POSITIONING.md
examples/: README.md  claude_desktop_config.json  mcp_client_smoke.py
keys/: README.md  warden-curator.pub
knowledge/: registry.json
knowledge/owasp-agentic-top10/: content.md  knowledge.manifest.json  kpack.sig.json  sources.md
schema/: signature.schema.json  skill-manifest.schema.json  transparency-log-entry.schema.json  trust-score.schema.json
site/: README.md  _headers  _redirects  app.js  index.html  styles.css
site/registry/: index.html  index.json
skills/: registry.json
skills/_samples/: README.md
skills/_samples/poisoned-weather/: SKILL.md  skill.manifest.json
skills/build-brain/build-product/: SKILL.md  skill.manifest.json  skill.sig.json
skills/build-brain/ship-gate/: SKILL.md  skill.manifest.json  skill.sig.json
skills/research-brain/fact-gate/: SKILL.md  (+2 more)
tools/: schema_check.py
warden/: __init__.py  _sandbox_runner.py  _selftest.py  api.py  audit.py  canonical.py  chacha.py  cli.py  content_address.py  ed25519.py  index_build.py  kpack.py  manifest.py  memory.py  node.py  orgpolicy.py  policy.py  repo.py  report.py  sandbox.py  scanner.py  sign.py  translog.py  trust.py  update.py  verify.py
(+15 files in other folders)
